Minor CSS fixes - decided not to fix/float actions as it breaks modal UX, and fixed a bug where content would overlap exposed filters.

--- a/css/file_browser.view.css
+++ b/css/file_browser.view.css
@@ -87,3 +87,8 @@ input[type="submit"][name="filter"] {
 .layout-container {
   margin: 0;
 }
+
+/* Prevent overlap from the external filters. */
+.view-content {
+  position: relative;
+}
